--- a/atp800/index.html
+++ b/atp800/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html class="x-strict"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html>
+<head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="HandheldFriendly" content="true">
 <title>ATP800</title>
-<link rel="shortcut icon" href="https://76.81.208.148/images/favicon.ico?v=220420024617" type="image/x-icon">
-<link href="index_files/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="index_files/login.css" rel="stylesheet" type="text/css">
-<link href="index_files/responsive.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="index_files/ext-all.js"></script>
-<script type="text/javascript" src="index_files/zld_product_spec.js"></script>
-<script type="text/javascript" src="index_files/zyFunction.js"></script>
-<link rel="stylesheet" type="text/css" href="index_files/custmiz_page.css">
-<script type="text/javascript" src="index_files/language_panel.js"></script>
-<script language="javascript" src="index_files/jquery-3.js"></script>
-<script language="javascript" src="index_files/custom.js"></script>
+<link rel="shortcut icon" href="/images/favicon.ico?v=220420024617" type="image/x-icon" />
+<link href="css/bootstrap.css?v=220420024617" rel="stylesheet" type="text/css">
+<link href="css/login.css?v=220420024617" rel="stylesheet" type="text/css">
+<link href="css/responsive.css?v=220420024617" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/ext-js/ext/ext-all.js?v=220420024617"></script>
+<script type="text/javascript" src="/ext-js/app/common/zld_product_spec.js?v=220420024617"></script>
+<script type="text/javascript" src="/ext-js/app/common/zyFunction.js?v=220420024617"></script>
+<link rel="stylesheet" type="text/css" href="/logo/custmiz_page.css?v=220420024617" />
+<script type="text/javascript" src="/lang/language_panel.js?v=220420024617"></script>
+<script language="javascript" src="lib/jquery-3.5.1.min.js?v=220420024617"></script>
+<script language="javascript" src="lib/custom.js?v=220420024617"></script>
 <script language="JavaScript">
 	var debugLog=false, cliLog=false;
 	var ns, ie;
@@ -151,18 +151,18 @@
 		});	
 	});
 </script>
-<script type="text/javascript" src="index_files/js.js" async=""></script></head>
-<body class="login-customized x-body x-gecko x-linux" onload="init();" id="ext-gen1018">
-<div class="bluebk hidden-xs" style="margin-top: 494.5px;"></div>
+</head>
+<body class="login-customized" onload="init();">
+<div class="bluebk hidden-xs"></div>
 <div class="backgroundbox"></div>
 <div class="container" style="">
  <div class="col-lg-68 col-md-68 col-sm-100 row row-demo row-same-height min-width-300">
- <div class="cardbox" style="display: block; margin-top: 269.5px;">
-  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-margin-top-15 col-md-margin-top-15 col-sm-margin-top-15 col-xs-margin-top-15 col-lg-margin-left-10 img-left">  <img src="index_files/logo.png" width="103px" height="29px"></div>
+ <div class="cardbox" style="display:none;">
+  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-margin-top-15 col-md-margin-top-15 col-sm-margin-top-15 col-xs-margin-top-15 col-lg-margin-left-10 img-left">  <img src="/logo/logo?v=220420024617" width="103px" height="29px"/></div>
     <div class="login_language col_language"></div>
     <div class="col_language_setting">
         <select class="select_language" id="lang_combo" onchange="Changelanguage();">
-            <option value="EN" selected="selected">English</option>
+            <option value="EN">English</option>
             <option value="FR">Français</option>
             <option value="DE">Deutsch</option>
             <option value="PL">Polski</option>
@@ -176,30 +176,30 @@
     </div>
 <div class="clearfix"></div>
   <div class="login-box">
-  <div class="col-lg-9 col-md-9 font-align-center font-size-20 col-lg-margin-top-10 col-md-margin-top-10 col-sm-margin-top-10 col-xs-margin-top-10 model_title">ATP800</div>
+  <div class="col-lg-9 col-md-9 font-align-center font-size-20 col-lg-margin-top-10 col-md-margin-top-10 col-sm-margin-top-10 col-xs-margin-top-10 model_title" >ATP800</div>
 <div class="clearfix"></div>
 <div class="col-lg-12 col-md-12 font-align-center font-color-666 col-lg-margin-top-13 col-md-margin-top-13 col-sm-margin-top-13 col-xs-margin-top-13 loginSubtitle">
-	<p id="_Enter_User"><script>multi_lingual("_Enter_User")</script>Enter User Name/Password and click to login.</p>
+	<p id="_Enter_User"><script>multi_lingual("_Enter_User")</script></p>
 </div>
 <div class="clearfix"></div>
 <form name="login" action="/" enctype="application/x-www-form-urlencoded" method="post" autocomplete="off">
 <div class="col-lg-12 col-lg-margin-top-20 col-md-margin-top-20 col-sm-margin-top-20 col-xs-margin-top-13">
  <div class="col-lg-username-input font-align-center accountInput">
- <div class="tooltip"><div><span id="_DynGst_User_Name" class="tooltiptext"><script>multi_lingual("_DynGst_User_Name")</script>User Name</span></div></div>
+ <div class="tooltip"><div><span id="_DynGst_User_Name" class="tooltiptext"><script>multi_lingual("_DynGst_User_Name")</script></span></div></div>
  <input id="username_input" name="username" type="text" maxlength="31">
  </div>
 </div>
 <div class="clearfix"></div>
 <div class="col-lg-12 col-lg-margin-top-20 col-md-margin-top-20 col-sm-margin-top-20 col-xs-margin-top-13">
  <div class="col-lg-username-input font-align-center passwordInput">
- <div class="tooltip"><div><span id="_DynGst_Password" class="tooltiptext"><script>multi_lingual("_DynGst_Password")</script>Password</span></div></div>
- <input id="pwd_input" name="pwd" type="password" maxlength="63" onkeypress="checkKey(event);">
+ <div class="tooltip"><div><span id="_DynGst_Password" class="tooltiptext"><script>multi_lingual("_DynGst_Password")</script></span></div></div>
+ <input id="pwd_input" name="pwd" type="password" maxlength="63" onkeyPress="checkKey(event);">
  </div>
 </div>
 <div class="clearfix"></div>
-	<input type="hidden" name="password">
-	<input name="pwd_r" type="hidden" value="">
-	<input type="hidden" id="mp_idx" name="mp_idx" value="0">
+	<input type="hidden" name="password"/>
+	<input name="pwd_r" type="hidden" value=""/>
+	<input type="hidden" id="mp_idx" name="mp_idx" value=""/>
 		<div class="col-lg-12">
 		 <div class="annotationFont font-color-666 col-lg-margin-top-13 col-md-margin-top-13 col-sm-margin-top-13 col-xs-margin-top-13">
 		  <p class="noMarginPadding redfont"></p>
@@ -214,26 +214,26 @@
 		</div>
 		<div class="col-lg-12 font-align-center col-lg-margin-top-10 col-md-margin-top-10 col-sm-margin-top-10 col-xs-margin-top-10 margin-10">
 	
-			<input id="login_button" type="button" value="Login" class="loginButton space" onclick="setData(false);">
+			<input id="login_button" type="button" value="" class="loginButton space" onclick="setData(false);">
 			<input type="button" value="Get Free Account" class="loginButton space long free">
 
 		</div>
 <div class="clearfix"></div>
-</form></div>
+</div>
 <!-- login box end-->
 </div>
-
-<div id="WalledGardenBox" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 min-width-300 WalledGardenbox" style="margin-top: 269.5px;">
+</form>
+<div id="WalledGardenBox" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 min-width-300 WalledGardenbox">
  <ul>
 	<div id="url"></div>
  </ul>
 </div>
 </div>
-<div id="note" class="col-lg-36 col-md-36 col-sm-61_4 note_triangle_txt note_triangle_txt" style="display: block; margin-top: 30px;">
+<div id="note" class="col-lg-36 col-md-36 col-sm-61_4 note_triangle_txt note_triangle_txt" style="display:none; margin-top:30px;">
  <ul>
-	<li class="note_title"><img src="index_files/login_note_B.png"><span id="_Note"><script>multi_lingual("_Note")</script>Note:</span></li>
-	<li id="_Turn_on"><script>multi_lingual("_Turn_on")</script>1. Turn on Javascript and Cookie setting in your web browser.</li>
-	<li id="_Turn_off"><script>multi_lingual("_Turn_off")</script>2. Turn off Popup Window Blocking in your web browser.</li>
+	<li class="note_title"><img src="images/login_note_B.png?v=220420024617"/><span id="_Note"><script>multi_lingual("_Note")</script></span></li>
+	<li id="_Turn_on"><script>multi_lingual("_Turn_on")</script></li>
+	<li id="_Turn_off"><script>multi_lingual("_Turn_off")</script></li>
 	<li></li>
  </ul>
 </div>
@@ -243,6 +243,5 @@
     $("#username_input").focus();
   });
 </script>
-
-
-<div class="x-tip x-layer x-tip-default x-border-box" id="ext-quicktips-tip" style="display: none;"><div class="x-tip-header x-header x-header-horizontal x-docked x-unselectable x-tip-header-default x-horizontal x-tip-header-horizontal x-tip-header-default-horizontal x-top x-tip-header-top x-tip-header-default-top x-docked-top x-tip-header-docked-top x-tip-header-default-docked-top" id="ext-quicktips-tip_header"><div id="ext-quicktips-tip_header-body" class="x-header-body x-tip-header-body x-tip-header-body-default x-tip-header-body-horizontal x-tip-header-body-default-horizontal x-tip-header-body-top x-tip-header-body-default-top x-tip-header-body-docked-top x-tip-header-body-default-docked-top x-box-layout-ct x-tip-header-body-default-horizontal x-tip-header-body-default-top x-tip-header-body-default-docked-top" role="presentation"><div id="ext-quicktips-tip_header-innerCt" class="x-box-inner " role="presentation"><div id="ext-quicktips-tip_header-targetEl" class="x-box-target" role="presentation"><div class="x-component x-header-text-container x-tip-header-text-container x-tip-header-text-container-default x-box-item x-component-default" unselectable="on" id="ext-quicktips-tip_header_hd"><span id="ext-quicktips-tip_header_hd-textEl" class="x-header-text x-tip-header-text x-tip-header-text-default" unselectable="on">&nbsp;</span></div></div></div></div></div><div id="ext-quicktips-tip-body" class="x-tip-body x-tip-body-default x-tip-body-default" role="presentation"><span id="ext-quicktips-tip-outerCt" style="display:table;" role="presentation"><div id="ext-quicktips-tip-innerCt" style="display:table-cell;height:100%;vertical-align:top;" class="" role="presentation"></div></span></div><div role="presentation" class="x-tip-anchor x-tip-anchor-top" id="ext-gen1024"></div></div></body></html>
+</body>
+</html>
